<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgNuitReturn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:contentDescription="@string/icon_frais_nuit"
                android:src="@drawable/frais_nuitee" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTitleNuit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:gravity="start|center"
                android:lines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/title_frais_nuit"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:orientation="vertical">

        <DatePicker
            android:id="@+id/datNuit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:baselineAligned="false"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:paddingEnd="10dp">

            <EditText
                android:id="@+id/txtNuit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:width="100dp"
                android:focusable="false"
                android:gravity="end|center_vertical"
                android:inputType="number">

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start">

            <TextView
                android:id="@+id/lblNuit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:labelFor="@+id/txtNuit"
                android:text="@string/nuit"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="start|center"
            android:orientation="vertical">

            <Button
                android:id="@+id/cmdNuitPlus"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/plus"
                android:textSize="20sp" />

            <Button
                android:id="@+id/cmdNuitMoins"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/moins"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/cmdNuitValider"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/valider" />

    </LinearLayout>

</LinearLayout>