<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".RepasActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:layout_weight="0.25"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgRepasReturn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                app:srcCompat="@drawable/frais_repas" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTitleRepas"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:gravity="center|start"
                android:lines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/title_frais_repas"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="8sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:orientation="horizontal">

        <DatePicker
            android:id="@+id/datRepas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:layout_weight="0.2"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="81dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:baselineAligned="false"
            android:paddingEnd="10dp"
            tools:ignore="RtlSymmetry">

            <EditText
                android:id="@+id/txtKm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:width="100dp"
                android:focusable="false"
                android:gravity="end|center_vertical"
                android:inputType="number">

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/lblKm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:labelFor="@+id/txtKm"
                android:text="@string/repas"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="start|center"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry">

            <Button
                android:id="@+id/cmdKmPlus"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/plus"
                android:textSize="20sp" />

            <Button
                android:id="@+id/cmdKmMoins"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/moins"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:layout_weight="0.15"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/cmdRepasValider2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/valider" />
    </LinearLayout>
</LinearLayout>